src/objects/WDLC_Comment__c.object
<CustomObject>
    <fields>
        <fullName>CommentMessage__c</fullName>
        <label>CommentMessage</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>createdByUser__c</fullName>
        <formula>CreatedBy.FirstName + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>createdByUser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdDate__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>createdDate</label>
        <type>DateTime</type>
    </fields>
</CustomObject>